2012-10-18  Kent Tamura  <tkent@chromium.org>

        Add Localizer::monthFormat and implementations
        https://bugs.webkit.org/show_bug.cgi?id=99704

        Reviewed by Kentaro Hara.

        * tests/LocaleMacTest.cpp:
        (LocaleMacTest::monthFormat): A helper function.
        (TEST_F): Added some tests.
        * tests/LocaleWinTest.cpp:
        (LocaleWinTest::monthFormat): A helper function.
        (TEST_F): Added some tests.
        * tests/LocalizedDateICUTest.cpp:
        (LocalizedDateICUTest::monthFormat): A helper function.
        (TEST_F): Added some tests.

2012-10-17  Mike West  <mkwst@chromium.org>

        Move mixed content logic out of FrameLoader
        https://bugs.webkit.org/show_bug.cgi?id=45638

        Reviewed by Eric Seidel.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::checkIfRunInsecureContent):
            Use the new method location.

2012-10-17  Shashi Shekhar  <shashishekhar@google.com>

        Remove redundant sdk_build parameter.
        https://bugs.webkit.org/show_bug.cgi?id=99648

        Reviewed by Adam Barth.

        sdk_build parameter is no longer needed.

        * WebKitUnitTests.gyp:

2012-10-17  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-10-17  Alec Flett  <alecflett@chromium.org>

        IndexedDB: Explicitly send null/undefined/integers to frontend IDBCallbacks
        https://bugs.webkit.org/show_bug.cgi?id=99619

        Reviewed by Adam Barth.

        Hook up new undefined/integer-based onSuccess handlers.

        * src/IDBCallbacksProxy.cpp:
        (WebKit::IDBCallbacksProxy::onSuccess):
        (WebKit):
        * src/IDBCallbacksProxy.h:
        (IDBCallbacksProxy):
        * src/WebIDBCallbacksImpl.cpp:
        (WebKit::WebIDBCallbacksImpl::onSuccess):
        (WebKit):
        * src/WebIDBCallbacksImpl.h:
        (WebIDBCallbacksImpl):
        * tests/IDBAbortOnCorruptTest.cpp: