@@ -3,6 +3,14 @@
         Add Localizer::monthFormat and implementations
         https://bugs.webkit.org/show_bug.cgi?id=99704
 
+        * tests/LocaleMacTest.cpp:
+        (TEST_F): Remove tests for fr_FR and ru locales for a compatibility reason.
+
+2012-10-18  Kent Tamura  <tkent@chromium.org>
+
+        Add Localizer::monthFormat and implementations
+        https://bugs.webkit.org/show_bug.cgi?id=99704
+
         Reviewed by Kentaro Hara.
 
         * tests/LocaleMacTest.cpp:
